appId: com.samheart.eduxl
---
- tapOn: "Next Question.*"
- waitForAnimationToEnd:
    timeout: 3000
- repeat:
    times: 7
    commands:
      - tapOn: "C"
      - waitForAnimationToEnd:
          timeout: 3000
      - tapOn: "Next Question.*"
      - waitForAnimationToEnd:
          timeout: 3000
- takeScreenshot: 14_quiz_finished
